# Fast-CRUD

./: fastapi.db  main.py  pyproject.toml
cruds/: board_crud.py  chat_crud.py  user_crud.py
db/: connection.py
models/: BoardModel.py  board_model.py  user_model.py
routers/: BoardRouter.py  board_router.py  board_routers.py  user_routers.py
schema/: board_schema.py  user_schema.py
